Archive2/93/04a13a89c156fb/output
main.cpp:2:9: error: ISO C++ forbids declaration of 'intmain' with no type [-fpermissive]
 intmain(){
         ^
main.cpp: In function 'int intmain()':
main.cpp:3:1: error: 'intv' was not declared in this scope
 intv[]={20,35,76,80};
 ^
main.cpp:3:6: error: expected primary-expression before ']' token
 intv[]={20,35,76,80};
      ^
main.cpp:5:4: error: 'v' was not declared in this scope
 a=&v[1];
    ^
main.cpp:7:16: warning: operation on 'a' may be undefined [-Wsequence-point]
 (*a--)=(*++a)+1;
                ^
main.cpp:8:14: warning: operation on 'a' may be undefined [-Wsequence-point]
 (*a)=--(*--a);
              ^
main.cpp:10:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
